# Skypro_hw.12.2_part2_unittest_backend-dev_Okruzhnov

./: pyproject.toml
tests/: test_arrs.py
