[tool.poetry]
name = "skypro-hw-12-2-unittest-backend-dev-okruzhnov"
version = "0.1.0"
description = ""
authors = ["Aleksei Okruzhnov <ale.okr@gmail.com>"]
readme = "README.md"
packages = [{include = "skypro_hw"}]

[tool.poetry.dependencies]
python = "^3.11"
coverage = "7.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
